k8s_manifests/wbo-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: wbo
  labels:
    name: wbo
