k8s_manifests/wbo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wbo-deployment
  namespace: wbo
  labels:
    app: wbo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wbo
  template:
    metadata:
      labels:
        app: wbo
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: wbo
        image: lovasoa/wbo:latest
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: "/opt/app/server-data"
            name: wbo-data
      volumes:
        - name: wbo-data
          persistentVolumeClaim:
            claimName: wbo-data
