k8s_manifests/wbo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wbo
  namespace: wbo
spec:
  selector:
    app: wbo
  ports:
    - protocol: TCP
      port: 10354
      targetPort: 80
