k8s_manifests/wbo-ingress_example.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wbo-ingress
  namespace: wbo
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - wbo.k8s.example.com
    secretName: wbo-k8s-example-com-tls
  ingressClassName: nginx
  rules:
  - host: wbo.k8s.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wbo
            port:
              number: 10354
