k8s_manifests/authelia-redis-netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-allow-authelia
  namespace: redis
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 6379
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: authelia
      app.kubernetes.io/name: authelia
  policyTypes:
  - Ingress
  - Egress
